--- a/DiscordWebhookLib/DiscordWebhookLib.csproj
+++ b/DiscordWebhookLib/DiscordWebhookLib.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DiscordWebhookLib</RootNamespace>
     <AssemblyName>DiscordWebhookLib</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
@@ -53,6 +53,7 @@
     <Compile Include="Discord\DiscordMessage.cs" />
     <Compile Include="Discord\Embed.cs" />
     <Compile Include="Discord\Field.cs" />
+    <Compile Include="Discord\HttpExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
